--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Garage2
 spring.datasource.username=postgres
 spring.datasource.password=q1w2e3r4t5y6!
+spring.h2.console.enabled=true
