--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Garage2
 spring.datasource.username=postgres
 spring.datasource.password=q1w2e3r4t5y6!
-spring.h2.console.enabled=true
-
-
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
+#logging.level.root=info
+spring.mvc.hiddenmethod.filter.enabled=true
