--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,12 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Garage2
 spring.datasource.username=postgres
 spring.datasource.password=q1w2e3r4t5y6!
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
 #logging.level.root=info
